; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_main.c_CloseGame.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_main.c_CloseGame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isloaded = common dso_local global i64 0, align 8
@CurGame = common dso_local global i64 0, align 8
@soundrecfn = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CloseGame() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @isloaded, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

5:                                                ; preds = %0
  %6 = call i32 (...) @FCEUI_CloseGame()
  %7 = call i32 (...) @DriverKill()
  store i64 0, i64* @isloaded, align 8
  store i64 0, i64* @CurGame, align 8
  %8 = load i64, i64* @soundrecfn, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %5
  %11 = call i32 (...) @FCEUI_EndWaveRecord()
  br label %12

12:                                               ; preds = %10, %5
  %13 = call i32 (...) @InputUserActiveFix()
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %12, %4
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @FCEUI_CloseGame(...) #1

declare dso_local i32 @DriverKill(...) #1

declare dso_local i32 @FCEUI_EndWaveRecord(...) #1

declare dso_local i32 @InputUserActiveFix(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
